samples/_failures_safe/1761510968_7e01df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c8dc7ba.c: In function ‘main’:
./samples/SAFE/__tmp_1c8dc7ba.c:156:13: error: expected expression at end of input
  156 |             case
      |             ^~~~
./samples/SAFE/__tmp_1c8dc7ba.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c8dc7ba.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c8dc7ba.c:156:13: error: expected declaration or statement at end of input
